tich hop sipjs call

--- a/frontend/src/app/shared/popup/thong-tin-cau-hinh/thong-tin-cau-hinh.component.html
+++ b/frontend/src/app/shared/popup/thong-tin-cau-hinh/thong-tin-cau-hinh.component.html
@@ -6,7 +6,8 @@
     <div class="d-inline mt-1">
       <table class="table table-bordered">
         <tr>
-          <td colspan="2" class="text-center" (dblclick)="copyText('https://dhftech.store/api/v1/data/createData?shopCode='+data.code)">https://dhftech.store/api/v1/data/createData?shopCode={{data?data.code:''}}</td>
+          <!-- <td colspan="2" class="text-center" (dblclick)="copyText('https://dhftech.store/api/v1/data/createData?shopCode='+data.code)">https://dhftech.store/api/v1/data/createData?shopCode={{data?data.code:''}}</td> -->
+          <td colspan="2" class="text-center" (dblclick)="copyText('https://crm.adsxanh-market.com/api/v1/data/createData?shopCode='+data.code)">https://crm.adsxanh-market.com/api/v1/data/createData?shopCode={{data?data.code:''}}</td>
         </tr>
         <tr (dblclick)="copyText('name')">
           <td style="width: 50%" class="text-right">name</td>
