Tối ưu hiệu năng

--- a/frontend/src/app/shared/popup/xu-ly-du-lieu/XuLyDuLieuPopup.component.html
+++ b/frontend/src/app/shared/popup/xu-ly-du-lieu/XuLyDuLieuPopup.component.html
@@ -65,7 +65,7 @@
       </tr>
       <tr>
         <td colspan="4" class="text-center">
-          <iframe [src]="link" frameborder="0" width="100%" allow="autoplay; camera; microphone"></iframe>
+          <!-- <iframe [src]="link" frameborder="0" width="100%" allow="autoplay; camera; microphone"></iframe> -->
           <qrcode [qrdata]="data.phone" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
         </td>
       </tr>
